--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,8 +46,10 @@ h1 {
 /* About Section */
 .about {
     margin-top: 60px;
-    padding-top: 40px;
+    padding: 40px 0;
     border-top: 1px solid #222;
+    border-bottom: 1px solid #222;
+
 }
 
 h2 {
@@ -62,6 +64,50 @@ h2 {
     margin-bottom: 20px;
     color: #aaa;
 }
+.projects{
+    width: 100%;
+    display: flex;
+    gap: 40px;
+    margin-top: 100px;
+}
+
+.project-card{
+    width: 50%;
+    height: 500px;
+    background-color: lightcoral;
+    color: black;
+    padding: 6px;
+    border-radius: 16px;
+}
+.project-card img{
+    width: 100%;
+    /* parent border radius - parent padding = child borderRadius */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.project-card .text-container {
+    margin: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.project-card .text-container h2{
+    color: black;
+    margin: 0;
+    padding: 0;
+}
+.view-parent{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.view-parent a{
+    color: black;
+}
+
+
 .foot{
     
     color: antiquewhite;
@@ -69,4 +115,22 @@ h2 {
     padding: 80px 0 60px;
     
     
+}
+
+
+@media screen and (max-width: 720px) {
+    .projects{
+        flex-direction: column;
+        align-items: center;
+    }
+    .project-card{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 350px) {
+  
+    .project-card{
+        width: 100%;
+    }
 }
