--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,15 @@ header {
     text-align: center;
     padding: 80px 0 60px;
 }
-
+/* Profile Picture */
+.profile-pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    border: 3px solid #3b82f6;
+    object-fit: cover;
+}
 h1 {
     font-size: 3em;
     color: #ffffff;
@@ -116,6 +124,7 @@ h2 {
     
     
 }
+
 
 
 @media screen and (max-width: 720px) {
